samples/_failures_safe/1761090259_2bc653_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_63afe865.c: In function ‘main’:
./samples/SAFE/__tmp_63afe865.c:155:31: error: missing terminating " character
  155 |             a.cols = read_int("Enter columns for matrix A (1-
      |                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_63afe865.c:155:13: error: expected expression at end of input
  155 |             a.cols = read_int("Enter columns for matrix A (1-
      |             ^
./samples/SAFE/__tmp_63afe865.c:155:22: error: too few arguments to function ‘read_int’
  155 |             a.cols = read_int("Enter columns for matrix A (1-
      |                      ^~~~~~~~
./samples/SAFE/__tmp_63afe865.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_63afe865.c:155:13: error: expected declaration or statement at end of input
  155 |             a.cols = read_int("Enter columns for matrix A (1-
      |             ^
./samples/SAFE/__tmp_63afe865.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_63afe865.c:155:13: error: expected declaration or statement at end of input
